<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ratingBar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/rating_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar_title"
            android:progressTint="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/ratingBar_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_rating"
            android:layout_centerHorizontal="true"
            android:text="@string/ratingBar_comment"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar_comment"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/rating_comment_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/comment_title"
            android:layout_marginStart="12dp"
            android:layout_toRightOf="@id/comment_title"
            android:text="@string/rating_comment_extra"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/user_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/comment_title"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:focusable="true"
                android:hint="@string/rating_comment_hint"
                android:focusableInTouchMode="true"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/button_send_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_comment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/myColorTextIcons"
            android:textStyle="bold"
            android:text="@string/rating_bnSend" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>