<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile_image"
                    app:srcCompat="@drawable/user_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/user_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/profile_fullname"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/myColorPrimaryText"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_fullname"
                    android:layout_alignStart="@+id/user_fullname"
                    android:layout_alignEnd="@+id/user_fullname"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/profile_nickname"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/myColorSecondaryText"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_nickname"
                    android:layout_alignStart="@+id/user_fullname"
                    android:layout_alignEnd="@+id/user_fullname"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/profile_email"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/myColorPrimaryText"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/user_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_email"
                    android:layout_alignStart="@+id/user_fullname"
                    android:layout_alignEnd="@+id/user_fullname"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/profile_area"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/myColorSecondaryText"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/user_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_location"
                    android:layout_alignStart="@+id/user_fullname"
                    android:layout_alignEnd="@+id/user_fullname"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/profile_address"
                    android:maxLines="3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/myColorSecondaryText"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/user_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_address"
                    android:layout_alignStart="@+id/user_fullname"
                    android:layout_alignEnd="@+id/user_fullname"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/profile_telephone"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/myColorSecondaryText"
                    android:textSize="24sp" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>