<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardBackgroundColor="@color/myColorPrimaryLight"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:padding="4dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:src="@drawable/item_icon"
            app:civ_border_color="@android:color/black"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/cardview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardview_image"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:hint="@string/default_title"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/myColorPrimaryText"
            android:textColorHint="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cardview_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardview_name"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:hint="@string/default_category"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/myColorPrimaryText" />

        <TextView
            android:id="@+id/cardview_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardview_category"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:hint="@string/default_status"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/myColorPrimaryText"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/cardview_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardview_status"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:hint="-"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHint="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/cardview_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardview_status"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/cardview_price"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="€"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/cardview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardview_price"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:hint="@string/default_ExpireDate"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/cardview_bn_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignTop="@+id/cardview_image"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/pencil_button"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/cardview_price"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/cardview_bookmark"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_bookmark_border" />

        <ImageView
            android:id="@+id/bought"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/cardview_price"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/cardview_bought"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_bought" />

        <ImageView
            android:id="@+id/cardview_bn_rating"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_below="@id/cardview_date"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/review_button"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_rating" />

        <ImageView
            android:id="@+id/cardview_rating_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardview_date"
            android:layout_toEndOf="@+id/cardview_bn_rating"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/review_button"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_done" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>